ETSL-298 Removed line height to fix h2 overlap

--- a/ui.frontend/src/main/webpack/etisalat/styles/blogspot.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/blogspot.scss
@@ -66,8 +66,7 @@
     .box-title h2 {
       &.title-heading {
         font-size: $font24;
-        color: $black;
-        line-height: 22px;	
+        color: $black;	
        }
       color: $cart-count-black;
       margin: 0;
